scrollbar issue

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9,6 +9,11 @@ body {
   color: #8aa3bc;
 }
 
+/* scrollbar reserved */
+html {
+  overflow-y: scroll;
+}
+
 /* link details */
 a:link    { color: #8abca0; }
 a:visited { color: #938abc; }
